Fixed alignment mistakes from before.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+:root {
+    /* Fonts */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    /* Font sizes */
+    --header-size: 32px;
+    --title-size: 20px;
+
+    /* Colors */
+    --sidebar-color: #568ce3;
+    --header-color: #fafafa;
+    --content-color: #e5e7eb;
+    --plain-text: #4f5255;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -11,19 +26,6 @@ body {
     height: 100vh;
     width: 100vw;
     justify-content: center;
-
-    /* Fonts */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-    /* Font sizes */
-    --header-size: 32px;
-    --title-size: 20px;
-
-    /* Colors */
-    --sidebar-color: #568ce3;
-    --header-color: #fafafa;
-    --content-color: #e5e7eb;
-    --plain-text: #4f5255;
 }
 
 a {
@@ -70,10 +72,12 @@ ul {
 .content {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
-
     background-color: var(--content-color);
-
     box-shadow: inset -2px 8px 16px -12px rgba(0,0,0,0.76);
+    padding: 15px 25px;
+    gap: 30px;
+    display: grid;
+    grid-template-columns: 7fr 3fr;
 }
 
 .logo,
@@ -174,15 +178,11 @@ li {
     font-weight: bold;
 }
 
-.content {
-    display: grid;
-    grid-template-columns: 7fr 3fr;
-}
-
 .content
 .projects {
     display: grid;
     grid-template-rows: 50px 1fr;
+    gap: 15px;
 }
 
 .content {
@@ -191,24 +191,23 @@ li {
 }
 
 .side-content {
-    padding-right: 30px;
-    padding-bottom: 20px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
 .announcements,
 .trending {
     display: grid;
     grid-template-rows: 50px 1fr;
-    padding-top: 15px;
+    gap: 15px;
 }
 
 .projects
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: repeat(3, 200px);
+    grid-template-rows: repeat(auto-fill, 200px);
     gap: 30px;
-    padding: 15px 30px;
 }
 
 .search-button {
@@ -311,7 +310,6 @@ svg {
 
 .projects
 .title {
-    padding-left: 30px;
     font-weight: 550;
 }
 
@@ -371,9 +369,6 @@ svg {
 .trending
 .title {
     font-weight: 550;
-    display: grid;
-    justify-content: flex-start;
-    align-items: center;
 }
 
 .ann-card-title {
@@ -403,8 +398,6 @@ svg {
 .ann-1st,
 .ann-2nd,
 .ann-3rd {
-    padding-top: 15px;
-    padding-bottom: 15px;
 }
 
 .trending-list {
